# spyropose

./: .gitignore  LICENSE  README.md  infer.py  pyproject.toml  readme.md  spyropose.yml
spyropose/: helpers.py  model.py  rotation_grid.py  translation_grid.py  unet.py  utils.py
spyropose/data/: symsol.py  symsol_ours.py
spyropose/data/bop/: auxs.py  cosy_multiview.py  instance.py  tfms.py
spyropose/scripts/: eval_mv.py  eval_vis.py  inspect_data.py  run_eval.py  train.py
src/spyropose/: frame.py  helpers.py  model.py  obj.py  rotation_grid.py  se3_grid.py  translation_grid.py  unet.py  utils.py  vis.py
src/spyropose/data/: auxs.py  cfg.py  data_cfg.py  dataset.py  multiview_cropper.py  renderer.py  symsol_objects.py  tfms.py
src/spyropose/data/bop/: auxs.py  config.py  dataset.py  instance.py  multiview_cropper.py
src/spyropose/detection/: det_data.py  det_train.py  model.py  train.py
src/spyropose/scripts/: eval.py  eval_mv.py  eval_uniform.py  eval_vis.py  eval_vis_.py  infer.py  inspect_data.py  train.py
