[project]
name = "spyropose"
version = "0.0.0"
license = { file = "LICENSE" }
dependencies = [
    "torch >= 2.3.0",
    "torchvision >= 0.18.0",
    "opencv-python >= 4.9.0.80",
    "albumentations >= 1.4.7",
    "pytorch_lightning >= 2.2.5",
    "trimesh >= 4.4.0",
    "matplotlib >= 3.9.0",
    "healpy >= 1.17.1",
    "icosphere >= 0.1.3",
    "moderngl >= 5.10.0",
    "einops >= 0.8.0",
]