[project]
name = "spyropose"
version = "0.1.0"
license = { file = "LICENSE" }
requires-python = ">=3.12"
dependencies = [
    "torch >= 2.3.0",
    "torchvision >= 0.18.0",
    "opencv-python >= 4.9.0.80",
    "albumentations >= 1.4.7",
    "pytorch_lightning >= 2.2.5",
    "trimesh >= 4.4.0",
    "matplotlib >= 3.9.0",
    "healpy >= 1.17.1",
    "icosphere >= 0.1.3",
    "moderngl >= 5.10.0",
    "einops >= 0.8.0",
    "jsonargparse>=4.40.0",
    "pyqt6>=6.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
indent-width = 4

[tool.ruff.lint]
ignore = ["E741"]

[tool.ruff.format]
indent-style = "space"
